force-app/main/default/objects/Nomination_History__c/fields/Committee_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Committee_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Committee Affiliation</label>
    <referenceTo>npe5__Affiliation__c</referenceTo>
    <relationshipLabel>Nomination History</relationshipLabel>
    <relationshipName>Nomination_History</relationshipName>
    <type>Lookup</type>
</CustomField>