force-app/main/default/objects/Nomination_History__c/fields/Committee_Nomination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Committee_Nomination_Notes__c</fullName>
    <label>Committee Nomination Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>