force-app/main/default/objects/Nomination_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Affiliated to the Nomination History record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nomination History</relationshipLabel>
    <relationshipName>Nomination_History</relationshipName>
    <type>Lookup</type>
</CustomField>