force-app/main/default/objects/Nomination_History__c/fields/Date_considered__c.field-meta.xml
<CustomField>
    <fullName>Date_considered__c</fullName>
    <label>Date considered</label>
    <type>Date</type>
</CustomField>