force-app/main/default/objects/Nomination_History__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified - Advance</fullName>
            </value>
            <value>
                <fullName>Qualified - Hold</fullName>
            </value>
            <value>
                <fullName>Disqualified - Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>