force-app/main/default/objects/Nomination_History__c/fields/Nomination_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Status_Notes__c</fullName>
    <label>Nomination Status Notes</label>
    <type>TextArea</type>
</CustomField>